Fix spacing issue on homepage with space btw main image and triangle.

--- a/web/css/qaf-homepage.css
+++ b/web/css/qaf-homepage.css
@@ -47,6 +47,12 @@ div.series-listing img {
 #at {
   color: #999;
 }
+
+div#feature-image, #feature-image a img {
+  width: 500px;
+  height: 240px;
+}
+
 #info-left{
   float: left;
   margin: 16px 12px 0 12px;
